# UAV_NSU

./: .gitignore  README.md
UAV_NSU/: CMakeLists.txt  MapView.qml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.h
UAV_NSU/Circle/: circlestatus.cpp  circlestatus.h
UAV_NSU/Tabs/Map/: map.cpp  map.h  peleng.cpp  peleng.h
UAV_NSU/Tabs/Mission/: missioncontrol.cpp  missioncontrol.h  missionpoint.h
UAV_NSU/Tabs/Setup/: serialsetup.cpp  serialsetup.h  ublox_structs.h  ubloxx.cpp  ubloxx.h
UAV_NSU/Worker/Drone/: droneworker.cpp  droneworker.h
UAV_NSU/Worker/Generator/: generatorcontrol.cpp  generatorcontrol.h  generatorparamworker.cpp  generatorparamworker.h
UAV_NSU/Worker/Mavlink/: mavlinkworker.cpp  mavlinkworker.h
UAV_NSU/mavlink_flygen_c/ardupilotmega/: ardupilotmega.h  mavlink.h
UAV_NSU/mavlink_flygen_c/common/: common.h  mavlink.h
UAV_NSU/mavlink_flygen_c/csAirLink/: csAirLink.h  mavlink.h
UAV_NSU/mavlink_flygen_c/cubepilot/: cubepilot.h  mavlink.h
UAV_NSU/mavlink_flygen_c/flygen_cmd/: flygen_cmd.h  mavlink.h  mavlink_msg_flygen_attenuation.h  mavlink_msg_flygen_endfreq.h  mavlink_msg_flygen_freq.h  mavlink_msg_flygen_init.h  mavlink_msg_flygen_lvl.h  mavlink_msg_flygen_mode.h  mavlink_msg_flygen_power.h  mavlink_msg_flygen_rfswitch.h  mavlink_msg_flygen_shdn.h  mavlink_msg_flygen_stepfreq.h  mavlink_msg_flygen_steptime.h  testsuite.h  version.h
UAV_NSU/mavlink_flygen_c/icarous/: icarous.h  mavlink.h
UAV_NSU/mavlink_flygen_c/loweheiser/: loweheiser.h  mavlink.h  version.h
UAV_NSU/mavlink_flygen_c/minimal/: mavlink.h  minimal.h
UAV_NSU/mavlink_flygen_c/standard/: mavlink.h  standard.h
UAV_NSU/mavlink_flygen_c/uAvionix/: mavlink.h  uAvionix.h
